--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="container mx-auto px-6 relative z-10 text-center">
             <div class="max-w-3xl mx-auto">
                 <h1 class="animated-text text-4xl md:text-5xl lg:text-6xl font-bold mb-4">ATLANTA'S PREMIER AUTO DETAILING STUDIO</h1>
-                <p class="text-xl md:text-2xl mb-8 font-light">High-end care for luxury and exotic vehicles</p>
+                <p class="text-xl md:text-2xl mb-8 font-light italic">High-end care for luxury and exotic vehicles</p>
                 <a href="book-now.html" class="inline-block bg-gradient-to-r from-yellow-600 to-yellow-800 hover:from-yellow-700 hover:to-yellow-900 text-white font-bold py-3 px-8 rounded-full transition-all duration-300 transform hover:scale-105 shadow-lg">
                     BOOK YOUR APPOINTMENT
                 </a>
